--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ main {
   flex-grow: 1;
 }
 
-.content h2 {
+.content h1 {
   margin: 12px 0;
 }
 
@@ -175,7 +175,7 @@ main {
   margin-left: 24px;
 }
 
-.profile h2 {
+.profile h1 {
   text-align: center;
   margin-bottom: 24px;
 }
@@ -196,6 +196,14 @@ main {
   object-position: center;
   border-radius: 10px;
   border: 4px solid white;
+}
+
+.profile .social {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  margin-block: 8px;
 }
 
 footer {
