--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,7 @@ main {
   margin-top: 8px;
   display: flex;
   gap: 8px;
+  flex-wrap: wrap;
 }
 
 .stacks a {
@@ -130,6 +131,7 @@ main {
   padding: 4px;
   border: 1px solid black;
   border-radius: 4px;
+  white-space: nowrap;
 }
 
 .links {
